FIX: card border bleeding to other websites

--- a/chrome/userContent.css
+++ b/chrome/userContent.css
@@ -25,10 +25,16 @@
     /* border: 0px solid #00FFFF !important; */
 }
 
-.tile,
-.card {
+.tile {
     box-shadow: 0 0 10px 1px rgba(0, 255, 255, 1) !important;
     background-color: var(--newtab-background-color-secondary) !important;
+}
+
+.card-outer {
+    .card {
+        box-shadow: 0 0 10px 1px rgba(0, 255, 255, 1) !important;
+        background-color: var(--newtab-background-color-secondary) !important;
+    }
 }
 
 .tile:hover {
